--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
 body {
     background: rgb(255,255,255);
     background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(60,110,113,1) 100%);
-    height: 100vh;
-    background-size: cover;
-    
-
 }
 
 h1 {
@@ -75,4 +71,18 @@ form button:hover {
     -webkit-box-shadow: 0px 10px 20px -6px rgba(40,75,99,1);
     -moz-box-shadow: 0px 10px 20px -6px rgba(40,75,99,1);
     box-shadow: 0px 10px 20px -6px rgba(40,75,99,1);
+}
+
+.guestbook {
+    border: 1px solid #353535;
+    border-radius: 10px;
+    padding: 16px;
+    background-color: rgba(40,75,99,0.4);
+    -webkit-box-shadow: 0px 10px 20px -6px rgba(40,75,99,1);
+    -moz-box-shadow: 0px 10px 20px -6px rgba(40,75,99,1);
+    box-shadow: 0px 10px 20px -6px rgba(40,75,99,1);
+}
+
+.entry {
+    border-bottom: 1px solid #353535;
 }
